--- a/index.html
+++ b/index.html
@@ -2681,6 +2681,104 @@
 
     <h1>SQL Views</h1>
 
+    <p>
+        In SQL, a view is a virtual table based on the result-set of an SQL statement.
+
+        A view contains rows and columns, just like a real table. The fields in a view are fields from one or more real tables in the database.
+
+        You can add SQL statements and functions to a view and present the data as if the data were coming from one single table.
+
+        A view is created with the CREATE VIEW statement. 
+    </p>
+
+    <h3>CREATE VIEW Syntax</h3>
+    <ul>
+        <li>CREATE VIEW view_name AS</li>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>
+        Note: A view always shows up-to-date data! The database engine recreates the view, every time a user queries it.
+    </p>
+
+    <h3>SQL CREATE VIEW Examples</h3>
+
+    <p>The following SQL creates a view that shows all customers from Brazil:</p>
+
+    <p>
+        CREATE VIEW [Brazil Customers] AS
+        SELECT CustomerName, ContactName
+        FROM Customers
+        WHERE Country = 'Brazil';
+    </p>
+
+    <p>
+        We can query the view above as follows:
+
+        SELECT * FROM [Brazil Customers];
+    </p>
+
+    <p>
+        The following SQL creates a view that selects every product in the "Products" table with a price higher than the average price:
+
+        <ul>
+            <li>CREATE VIEW [Products Above Average Price] AS</li>
+            <li>SELECT ProductName, Price</li>
+            <li>FROM Products</li>
+            <li>WHERE Price > (SELECT AVG(Price) FROM Products);</li>
+        </ul>
+    </p>
+
+    <p>
+        We can query the view above as follows:
+
+        SELECT * FROM [Products Above Average Price];
+    </p>
+
+    <h3>SQL Updating a View</h3>
+
+    <p>
+        A view can be updated with the CREATE OR REPLACE VIEW statement.
+
+        <ul>
+            <li>CREATE OR REPLACE VIEW view_name AS</li>
+            <li>SELECT column1, column2, ...</li>
+            <li>FROM table_name</li>
+            <li>WHERE condition;</li>
+        </ul>
+    </p>
+
+    <p>
+        The following SQL adds the "City" column to the "Brazil Customers" view:
+
+
+        CREATE OR REPLACE VIEW [Brazil Customers] AS
+        SELECT CustomerName, ContactName, City
+        FROM Customers
+        WHERE Country = 'Brazil';
+    </p>
+
+    <h1>SQL Dropping a View</h1>
+
+    <p>
+        A view is deleted with the DROP VIEW statement.
+
+        syntax is following:
+        DROP VIEW view_name;
+
+    </p>
+
+    <p>
+        The following SQL drops the "Brazil Customers" view:
+
+        DROP VIEW [Brazil Customers];
+
+    </p>
+
+    <h1>SQL Injection</h1>
+
 
 
 
