--- a/index.html
+++ b/index.html
@@ -2973,7 +2973,41 @@
 
     <h1>SQL Hosting</h1>
 
+    <p>
+        If you want your web site to be able to store and retrieve data from a database, your web server should have access to a database-system that uses the SQL language.
+        If your web server is hosted by an Internet Service Provider (ISP), you will have to look for SQL hosting plans.
+        The most common SQL hosting databases are MS SQL Server, Oracle, MySQL, and MS Access.
 
+
+    </p>
+
+    <h3>MS SQL Server</h3>
+    <p>
+        Microsoft's SQL Server is a popular database software for database-driven web sites with high traffic.
+        SQL Server is a very powerful, robust and full featured SQL database system.
+    </p>
+
+    <h3>Oracle</h3>
+    <p>
+        Oracle is also a popular database software for database-driven web sites with high traffic.
+        Oracle is a very powerful, robust and full featured SQL database system.
+    </p>
+
+    <h3>MySQL</h3>
+    <p>
+        MySQL is also a popular database software for web sites.
+        MySQL is a very powerful, robust and full featured SQL database system.
+        MySQL is an inexpensive alternative to the expensive Microsoft and Oracle solutions.
+    </p>
+
+    <h3>MS Access</h3>
+    <p>
+        When a web site requires only a simple database, Microsoft Access can be a solution.
+        MS Access is not well suited for very high-traffic, and not as powerful as MySQL, SQL Server, or Oracle.
+    </p>
+
+
+    <h1>SQL Data Types</h1>
 
 
 
