--- a/index.html
+++ b/index.html
@@ -3009,6 +3009,17 @@
 
     <h1>SQL Data Types</h1>
 
+    <p>
+        The data type of a column defines what value the column can hold: integer, character, money, date and time, binary, and so on.
+        Each column in a database table is required to have a name and a data type.
+
+        An SQL developer must decide what type of data that will be stored inside each column when creating a table. The data type is a guideline for SQL to understand what type of data is expected inside of each column, and it also identifies how SQL will interact with the stored data.
+
+        Note: Data types might have different names in different database. And even if the name is the same, the size and other details may be different! Always check the documentation!
+    </p>
+
+    <h3>In MySQL there are three main data types: string, numeric, and date and time.</h3>
+
 
 
 
